--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,4 +2,20 @@ body{
     text-align: center;
     font-family: Arial;
     color: rgb(15, 139, 79);
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+#container
+{
+    width: 50%;
+    padding: 1em;
+    text-align: middle;
+    border: 2px solid #014c1d;
+    margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 20px;
 }
