--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    font-family: Arial;
+    font-family: 'Times New Roman', Times, serif;
     color: rgb(15, 139, 79);
     font-size: 16px;
     margin: 0;
@@ -11,7 +11,7 @@ body{
     width: 50%;
     padding: 1em;
     text-align: middle;
-    border: 2px solid #014c1d;
+    border: 2px solid #0b973e;
     margin: 0 auto;
 }
 
