--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 body{
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
-    color: rgb(15, 139, 79);
+    color: rgb(191, 12, 12);
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -11,7 +11,7 @@ body{
     width: 50%;
     padding: 1em;
     text-align: middle;
-    border: 2px solid #0b973e;
+    border: 2px solid #660eb9;
     margin: 0 auto;
 }
 
